k8s/argocd/argo-dashboard-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-dashboard-route
  namespace: argocd
spec:
  entryPoints:
    - websecure
    - web
  routes:
  - match: Host(`4.193.70.42`)
    kind: Rule
    services:
      - name: my-argo-cd-argocd-server
        namespace: argocd
        kind: Service
        port: 80
        scheme: http
